[gd_scene load_steps=7 format=3 uid="uid://cxx6n4sr5i0tp"]

[ext_resource type="Script" path="res://menu.gd" id="1_8b5kp"]
[ext_resource type="FontFile" uid="uid://dgba8l3ee6gl6" path="res://Xolonium-Regular.ttf" id="1_h5ml1"]
[ext_resource type="Texture2D" uid="uid://kw8ui6gecsue" path="res://backgrounds/menuBackground/2qm3jz0bevf91.webp" id="1_nnf5m"]
[ext_resource type="Texture2D" uid="uid://bkcnwg1akmvtq" path="res://backgrounds/deleticon.png" id="4_c40dx"]

[sub_resource type="LabelSettings" id="LabelSettings_uckaf"]
font_size = 30
outline_size = 4
outline_color = Color(0, 1, 0, 1)
shadow_size = 21
shadow_color = Color(0.968627, 0, 0.921569, 0)

[sub_resource type="LabelSettings" id="LabelSettings_q5f1f"]
font_size = 23

[node name="Menu" type="CanvasLayer"]
script = ExtResource("1_8b5kp")

[node name="TextureRect" type="TextureRect" parent="."]
auto_translate_mode = 2
texture_filter = 1
offset_left = -377.0
offset_top = -49.0
offset_right = 1999.0
offset_bottom = 1301.0
localize_numeral_system = false
texture = ExtResource("1_nnf5m")
flip_h = true
flip_v = true

[node name="Title" type="Label" parent="."]
texture_filter = 1
anchors_preset = -1
anchor_top = 0.0123457
anchor_right = 1.00087
anchor_bottom = 0.106481
theme_override_fonts/font = ExtResource("1_h5ml1")
theme_override_font_sizes/font_size = 50
text = "Redox: Protect the World"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="StageOptions" type="OptionButton" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -145.0
offset_top = -19.0
offset_right = 139.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
button_pressed = true
selected = 0
item_count = 2
popup/item_0/text = "Level1"
popup/item_1/text = "Level2"
popup/item_1/id = 1

[node name="StartGameButton" type="Button" parent="."]
visible = false
texture_filter = 1
anchors_preset = -1
anchor_left = 0.419705
anchor_top = 0.847222
anchor_right = 0.580295
anchor_bottom = 0.935185
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_h5ml1")
theme_override_font_sizes/font_size = 25
text = "Start Game"
metadata/_edit_use_anchors_ = true

[node name="InstructionsButton" type="Button" parent="."]
texture_filter = 1
anchors_preset = -1
anchor_left = 0.833333
anchor_top = 0.861111
anchor_right = 0.979166
anchor_bottom = 0.950617
offset_left = -5.99963
offset_top = -3.9998
offset_right = -5.99963
offset_bottom = -3.99979
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_h5ml1")
theme_override_font_sizes/font_size = 25
text = "Instructions"
metadata/_edit_use_anchors_ = true

[node name="InstructionsMessage" type="RichTextLabel" parent="."]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -510.0
offset_top = -582.0
offset_right = 549.0
offset_bottom = -90.0
grow_horizontal = 2
grow_vertical = 0
text = "Welcome to \"Redox: Protect The World\" - Your Guide to Success!

Navigate the Adventure - Master the Basics:

Embark on an epic journey where your skills and knowledge will shape the destiny of the world. To navigate this thrilling realm:

Movement: Use left and right arrow keys to maneuver left or right across diverse landscapes.
Combat: Unleash a flurry of attacks by pressing the spacebar to fend off adversaries.
Grasp these controls firmly, for they are the cornerstone of your triumph.

Redox - Protect the World:
Embark on your journey with a fusion of science and strategy. Decode the challenges ahead by acquainting yourself with the Periodic Table, with a focus on Oxidation Numbers. This knowledge will light your path through the unknown. Shoot the correct oxidation numbers to raise your score. Hit a score of 100 before the end of the 24 questions to save the world!"

[node name="Selectlevel" type="Label" parent="."]
visible = false
offset_left = 435.0
offset_top = 244.0
offset_right = 715.0
offset_bottom = 284.0
theme_override_fonts/font = ExtResource("1_h5ml1")
theme_override_font_sizes/font_size = 33
text = "Select The level"

[node name="CloseButton" type="Button" parent="."]
visible = false
offset_left = 418.0
offset_top = 586.0
offset_right = 739.0
offset_bottom = 631.0
theme_override_fonts/font = ExtResource("1_h5ml1")
theme_override_font_sizes/font_size = 30
text = "Close"

[node name="Label" type="Label" parent="."]
offset_left = 412.0
offset_top = 222.0
offset_right = 701.0
offset_bottom = 294.0
text = "Enter Access Code"
label_settings = SubResource("LabelSettings_uckaf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="accessCodeInput" type="LineEdit" parent="."]
offset_left = 353.0
offset_top = 300.0
offset_right = 688.0
offset_bottom = 368.0
scale = Vector2(1.3, 1.3)
placeholder_text = "  Access code"
max_length = 16
clear_button_enabled = true
right_icon = ExtResource("4_c40dx")

[node name="submitButton" type="Button" parent="."]
offset_left = 505.0
offset_top = 419.0
offset_right = 636.0
offset_bottom = 477.0
text = "SUBMIT"

[node name="ResponseLabel" type="Label" parent="."]
visible = false
offset_left = 451.0
offset_top = 515.0
offset_right = 691.0
offset_bottom = 587.0
text = "Response"
label_settings = SubResource("LabelSettings_q5f1f")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[connection signal="item_selected" from="StageOptions" to="." method="_on_stage_options_item_selected"]
[connection signal="pressed" from="StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="InstructionsButton" to="." method="_on_instructions_button_pressed"]
[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="submitButton" to="." method="_on_SubmitButton_pressed"]
